name:                 ModML-Units
version:              0.0.1
cabal-version:        >= 1.6
license:              BSD3
build-type:           Simple
copyright:            Andrew Miller
author:               Andrew Miller
maintainer:           Andrew Miller <ak.miller@auckland.ac.nz>
stability:            experimental
synopsis:             A ModML module for models with units
description:          A ModML module for models with units

library
  hs-source-dirs:       .
  exposed-modules:
    ModML.Units.UnitsDAEModel
    ModML.Units.UnitsDAEOpAliases
    ModML.Units.SIUnits
  build-depends: 
                 ModML-Core ==0.0.*,
                 base ==4.*,
                 mtl >= 1 && < 3,
                 containers == 0.3.*,
                 typehash == 1.*,
                 random == 1.*,
                 template-haskell
